<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.EditPersonMsgActivity">


    <RelativeLayout
        android:id="@+id/edit_head"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/edit_go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@mipmap/back" />

        <TextView
            android:id="@+id/person_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="个人信息"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/person_avatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/edit_head"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/person_avatar"
        android:layout_marginStart="15dp"
        android:text="@string/text_user_name"
        android:textSize="16sp" />


    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_username"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:enabled="false"
        android:maxLines="1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_person_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_username"
        android:layout_marginStart="15dp"
        android:text="@string/text_person_desc"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_person_desc">


        <EditText
            android:id="@+id/et_person_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:maxLines="1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_save_desc"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_save_bg"
            android:gravity="center"
            android:text="@string/text_save"
            android:layout_marginEnd="5dp"
            android:textSize="14sp" />
    </RelativeLayout>

</RelativeLayout>