<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.activity.TicketActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/ticket_back_press"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@mipmap/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/text_ticket"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="33dp">

        <ImageView
            android:id="@+id/ticket_cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/flash_sale_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/shape_bt_box_bg"
            android:padding="4dp"
            android:text="限时十分钟抢购"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone" />

        <com.example.taobaounion.ui.custom.LoadingView
            android:id="@+id/ticket_loading"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_centerInParent="true"
            android:background="@mipmap/loading" />

        <TextView
            android:id="@+id/ticket_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/text_error_tips"
            android:textSize="14sp"
            android:visibility="gone" />

    </RelativeLayout>


    <TextView
        android:id="@+id/ticket_tao_kou_ling"
        android:layout_width="244dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_tao_box_bg"
        android:gravity="center" />

    <TextView
        android:id="@+id/code_open_bt"
        android:layout_width="141dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_bt_box_bg"
        android:gravity="center"
        android:text="@string/text_get_ticket"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <!--    <com.example.taobaounion.ui.custom.CircleView-->
    <!--        android:id="@+id/circle_count_down"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="100dp"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        app:circleColor="@color/blue"-->
    <!--        app:durationTime="10"-->
    <!--        app:radius="45dp"-->
    <!--        app:spaceTime="1000"-->
    <!--        app:stroke="2dp" />-->


</LinearLayout>